--- a/package.json
+++ b/package.json
@@ -6,17 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/icons": "^4.11.2",
+    "@testing-library/react-hooks": "^7.0.1",
+    "axios": "^0.21.1",
+    "framer-motion": "^4.1.17",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
+    "@jest/globals": "^27.0.6",
+    "@testing-library/dom": "^8.1.0",
+    "@testing-library/react": "^12.0.0",
     "@types/react": "17.0.15",
+    "babel-jest": "^27.0.6",
+    "enzyme": "^3.11.0",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
+    "jest": "^27.0.6",
     "typescript": "4.3.5"
   }
 }
