--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
-    "@jest/globals": "^27.0.6",
     "@testing-library/dom": "^8.1.0",
     "@testing-library/react": "^12.0.0",
+    "@types/jest": "^26.0.24",
     "@types/react": "17.0.15",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-jest": "^27.0.6",
     "enzyme": "^3.11.0",
     "eslint": "7.31.0",
